--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
                      </div>
                   </div>
                   <div class="col-sm-1 col-xs-4 mcright">
-                     <div class="text-right cart">
+                     <!--div class="text-right cart">
                         <a href="">
                         <img src="https://res.cloudinary.com/primefusion/image/fetch/http://premium-templates.org/ecommerce/html5/faraday/demo/v2/assets/images/icon-shop.png" />
                         <span class="badge">5</span>
                         <strong>cart</strong>
                         </a>
-                     </div>
+                     </div-->
                   </div>
                </div>
             </div>
