--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <div class="pagehead text-center">
                <h1>Suno<span>Austral</span></h1>
-               <p>Soluciones ingenieriles de calidad, <strong>garantizado</strong>.</p>
+               <p>Soluciones ingenieriles de calidad, <strong>garantizada</strong>.</p>
 			   <div class="readmore">
 				<a href="#firstwatch" class="readBtn">Readmore</a>
 			   </div>
