--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="utf-8">
-      <title>Single Product Website</title>
+      <title>[SunoAustral]</title>
       <meta name="description" content="">
       <meta name="author" content="SitePoint">
       <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -54,10 +54,11 @@
                <h1>Suno<span>Austral</span></h1>
                <p>Soluciones ingenieriles de calidad, <strong>garantizada</strong>.</p>
 			   <div class="readmore">
-				<a href="#firstwatch" class="readBtn">Readmore</a>
+				<a href="#firstwatch" class="readBtn">Ver más</a>
 			   </div>
             </div>
          </header>
+         <!--
          <div class="container">
 		<div class="card rel clearfix">
             <div class="col-sm-6">
@@ -452,23 +453,25 @@ horseradish taro rutabaga ricebean carrot black-eyed .</div>
 
       </div>
       </div>
+      -->
       <footer class="mtop">
          <div class="container inner clearfix">
             <div class="col-sm-6 col-md-3 col-xs-12">
-               <h5>Contact</h5>
+               <h5>Contacto</h5>
                <p>
-                  <small><b>Address</b></small>
-                  <small>No:17, South Carolina</small>
+                  <small><b>Dirección</b></small>
+                  <small>Universidad Austral de Chile, Campus Miraflores, Valdivia</small>
                </p>
                <p>
-                  <small><b>Email Us</b></small>
-                  <small>SouthCarolina@gmail.com</small>
+                  <small><b>E-mail</b></small>
+                  <small>sunoaustral@gmail.com</small>
                </p>
-               <p>
-                  <small><b>Call Us</b></small>
-                  <small>SouthCarolina@gmail.com</small>
-               </p>
+               <!--p>
+                  <small><b>Llámanos</b></small>
+                  <small></small>
+               </p-->
             </div>
+            <!--
             <div class="col-sm-6 col-md-3 col-xs-12">
                <h5>Latest News</h5>
                <div>
@@ -511,8 +514,9 @@ horseradish taro rutabaga ricebean carrot black-eyed .</div>
                   </div>
                </div>
             </div>
+               -->
             <div class="col-sm-6 col-md-3 col-xs-12">
-               <h5>Our Products</h5>
+               <h5>Nuestros Productos</h5>
                <ul>
                   <li><a href="">BumbleBee A Series</a></li>
                   <li><a href="">BumbleBee B Series</a></li>
@@ -529,7 +533,7 @@ horseradish taro rutabaga ricebean carrot black-eyed .</div>
             </div>
          </div>
 		 <div class="subfooter">
-			Copyright @2016 single page. Allrights Reserved
+			Copyright @2016 sunoaustral. Todos los derechos reservados
 		 </div>
       </footer>
       </div>
