--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
       <link rel="stylesheet" type="text/css" href="assets/css/jquery-ui.css"/>
 	  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
       <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-      <!--[if lt IE 9]>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-      <![endif]-->
 	  </head>
    <body>
       <div class="wrapper">
@@ -24,18 +21,18 @@
                <div class="container">
                   <div class="col-sm-1 col-xs-4 mobleft">
                      <div class="text-left">
-                        <img src="https://res.cloudinary.com/primefusion/image/fetch/http://premium-templates.org/ecommerce/html5/faraday/demo/v2/assets/images/top_logo.png" />
+                     <i class="fa fa-sun-o" style="color: white;font-size: 2.5em;"></i>
                      </div>
                   </div>
                   <div class="mobmenu"><i class="fa fa-navicon"></i></div>
                   <div class="col-sm-10 col-xs-3 colMenu">
                      <div class="text-center">
                         <ul class="list-inline">
-                           <li><a href="#">BeeWatch</a></li>
-                           <li><a href="">Experience</a></li>
-                           <li><a href="">Techspec</a></li>
-                           <li><a href="">Variants</a></li>
-                           <li><a href="" class="rndbtn">Buy</a></li>
+                           <li><a href="#">Inicio</a></li>
+                           <li><a href="">Quienes somos</a></li>
+                           <li><a href="">Problemática</a></li>
+                           <li><a href="">Informes</a></li>
+                           <li><a href="" class="rndbtn">Servicios</a></li>
                         </ul>
                      </div>
                   </div>
@@ -517,12 +514,16 @@ horseradish taro rutabaga ricebean carrot black-eyed .</div>
                -->
             <div class="col-sm-6 col-md-3 col-xs-12">
                <h5>Nuestros Productos</h5>
+               próximamente...
+               <!--
                <ul>
                   <li><a href="">BumbleBee A Series</a></li>
                   <li><a href="">BumbleBee B Series</a></li>
                   <li><a href="">BumbleBee C Series</a></li>
                </ul>
+               -->
             </div>
+            <!--
             <div class="col-sm-6 col-md-3 col-xs-12">
                <h5>Subscribe</h5>
                <div>
@@ -531,9 +532,10 @@ horseradish taro rutabaga ricebean carrot black-eyed .</div>
                </div>
                <a href="" class="rndbtn mtop">SUBSCRIBE</a>
             </div>
+            -->
          </div>
 		 <div class="subfooter">
-			Copyright @2016 sunoaustral. Todos los derechos reservados
+			Copyright @2017 sunoaustral. Todos los derechos reservados.
 		 </div>
       </footer>
       </div>
