--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
       <link rel="stylesheet" href="assets/css/rotate.css">
       <link rel="stylesheet" href="assets/css/animate.css">
       <link href="assets/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" type="text/css" href="assets/css/jquery-ui.css"/>
+      <link href="assets/css/jquerysctipttop.css" rel="stylesheet" type="text/css">
+      <link rel="stylesheet" type="text/css" href="assets/css/custom_style.css"/>
 	  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900" rel="stylesheet">
       <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 	  </head>
@@ -28,11 +29,11 @@
                   <div class="col-sm-10 col-xs-3 colMenu">
                      <div class="text-center">
                         <ul class="list-inline">
-                           <li><a href="#">Inicio</a></li>
-                           <li><a href="">Quienes somos</a></li>
+                           <li><a href="index.html" class="rndbtn">Inicio</a></li>
+                           <li><a href="staff.html">Quienes somos</a></li>
                            <li><a href="">Problemática</a></li>
                            <li><a href="">Informes</a></li>
-                           <li><a href="" class="rndbtn">Servicios</a></li>
+                           <li><a href="">Sesiones</a></li>
                         </ul>
                      </div>
                   </div>
