--- a/staff.html
+++ b/staff.html
@@ -50,14 +50,16 @@
          </div>
          <div class="info">
             <p><h4>Susana Obando</h4></p>
+            <p class ="career_info"><h6>Ingeniería Naval</h6></p>
          </div>
 </div><!--card cancel -->
 <div class="card">
          <div class="img">
-            <img src="http://www.yabengineering.com/Content/images/staff-default-m.png" alt="simple card" class="responsive">
+            <img src="assets/images/staff/francisco_gonzalez1.jpg" alt="simple card" class="responsive">
          </div>
          <div class="info">
             <p><h4>Francisco González</h4></p>
+            <p class ="career_info"><h6>Ingeniería Civil en Informática</h6></p>
          </div>
 </div><!--card cancel -->
 <div class="card">
@@ -66,14 +68,16 @@
          </div>
          <div class="info">
             <p><h4>Cristian Ordoñez</h4></p>
+            <p class ="career_info"><h6>Ingeniería Civil en Informática</h6></p>
          </div>
 </div><!--card cancel -->
 <div class="card">
          <div class="img">
-            <img src="http://www.yabengineering.com/Content/images/staff-default-m.png" alt="simple card" class="responsive">
+            <img src="assets/images/staff/fernando_reyes1.png" alt="simple card" class="responsive">
          </div>
          <div class="info">
             <p><h4>Fernando Reyes</h4></p>
+            <p class ="career_info"><h6>Ingeniería Civil en Informática</h6></p>
          </div>
 </div><!--card cancel -->
 <div class="card">
@@ -82,6 +86,7 @@
          </div>
          <div class="info">
             <p><h4>Gabriel Monarez</h4></p>
+            <p class ="career_info"><h6>Ingeniería Naval</h6></p>
          </div>
 </div><!--card cancel -->
 <div class="card">
@@ -90,6 +95,7 @@
          </div>
          <div class="info">
             <p><h4>José Pabst</h4></p>
+            <p class ="career_info"><h6>Ingeniería Naval</h6></p>
          </div>
 </div><!--card cancel -->
 
