--- a/staff.html
+++ b/staff.html
@@ -82,7 +82,7 @@
 </div><!--card cancel -->
 <div class="card">
          <div class="img">
-            <img src="http://www.yabengineering.com/Content/images/staff-default-m.png" alt="simple card" class="responsive">
+            <img src="assets/images/staff/gabriel_monarez1.jpeg" alt="simple card" class="responsive">
          </div>
          <div class="info">
             <p><h4>Gabriel Monarez</h4></p>
