footer on staff view

--- a/staff.html
+++ b/staff.html
@@ -102,6 +102,27 @@
          </div>
             </div>
       </header>
-
+      <footer class="mtop">
+         <div class="container inner clearfix">
+            <div class="col-sm-6 col-md-3 col-xs-12">
+               <h5>Contacto</h5>
+               <p>
+                  <small><b>Dirección</b></small>
+                  <small>Universidad Austral de Chile, Campus Miraflores, Valdivia</small>
+               </p>
+               <p>
+                  <small><b>E-mail</b></small>
+                  <small>sunoaustral@gmail.com</small>
+               </p>
+            </div>
+            <div class="col-sm-6 col-md-3 col-xs-12">
+               <h5>Nuestros Productos</h5>
+               próximamente...
+            </div>
+         </div>
+       <div class="subfooter">
+         Copyright @2017 sunoaustral. Todos los derechos reservados.
+       </div>
+      </footer>
    </body>
 </html>
