--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                   <div class="col-sm-10 col-xs-3 colMenu">
                      <div class="text-center">
                         <ul class="list-inline">
-                           <li><a href="index.html" class="rndbtn">Inicio</a></li>
-                           <li><a href="staff.html">Quienes somos</a></li>
+                           <li><a href="index.html">Inicio</a></li>
+                           <li><a href="staff.html" class="rndbtn"> Quienes somos</a></li>
                            <li><a href="">Problemática</a></li>
                            <li><a href="">Informes</a></li>
-                           <li><a href="">Sesiones</a></li>
+                           <li><a href="sesiones.html">Sesiones</a></li>
                         </ul>
                      </div>
                   </div>
