--- a/sesiones.html
+++ b/sesiones.html
@@ -100,7 +100,7 @@
 
                content=$('<div id="content_'+s.id+'": '+s.date+' class="tabcontent">\
                   <h4>'+capital(s.name)+'</h4>\
-                  <p><strong>fecha</strong>: '+s.date.toLocaleString("es-ES",date_options)+'</p>\
+                  <p><strong>Fecha</strong>: '+s.date.toLocaleString("es-ES",date_options)+'</p>\
                   Galería fotográfica\
                   <div id="photo_gallery_'+s.id+'" class="photo_gallery">\
                   </div>\
