--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                            <li><a href="index.html" class="rndbtn">Inicio</a></li>
                            <li><a href="staff.html"> Quienes somos</a></li>
                            <li><a href="">Problemática</a></li>
-                           <li><a href="">Informes</a></li>
+                           <li><a href="informes.html">Informes</a></li>
                            <li><a href="sesiones.html">Sesiones</a></li>
                         </ul>
                      </div>
@@ -55,9 +55,12 @@
 				<a href="#firstwatch" class="readBtn">Ver más</a>
 			   </div>
 <p></p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/eaeX8mY8MRY" frameborder="0" allowfullscreen></iframe>
+<iframe width="300" height="200" src="https://www.youtube.com/embed/eaeX8mY8MRY" frameborder="0" allowfullscreen></iframe>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/iuMvOESB9JE" frameborder="0" allowfullscreen></iframe>
+<iframe width="300" height="200" src="https://www.youtube.com/embed/iuMvOESB9JE" frameborder="0" allowfullscreen></iframe>
+
+<iframe width="300" height="200" src="https://www.youtube.com/embed/vJ2x7AEhFys" frameborder="0" allowfullscreen></iframe>
+            
             </div>
          </header>
          <!--
