--- a/staff.html
+++ b/staff.html
@@ -32,7 +32,7 @@
                            <li><a href="index.html">Inicio</a></li>
                            <li><a href="staff.html" class="rndbtn"> Quienes somos</a></li>
                            <li><a href="">Problemática</a></li>
-                           <li><a href="">Informes</a></li>
+                           <li><a href="informes.html">Informes</a></li>
                            <li><a href="sesiones.html">Sesiones</a></li>
                         </ul>
                      </div>
